syntax = "proto3";

option go_package = "github.com/lcnascimento/istio-knative-poc/notifications-service/grpc_protobuf";

package grpc;

import "google/protobuf/wrappers.proto";

service NotificationsServiceFrontend {
  rpc GetNotification(GetNotificationRequest) returns (GetNotificationResponse);
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);
  rpc EnqueueSendingNotification(SendNotificationRequest) returns (google.protobuf.BoolValue);
}

service NotificationsServiceWorker {
  rpc SendNotification(SendNotificationRequest) returns (google.protobuf.BoolValue);
}

message ListNotificationsRequest {

}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
}

message GetNotificationRequest {
  string notification_id = 1;
}

message GetNotificationResponse {
  Notification notification = 1;
}

message SendNotificationRequest {
  string notification_id = 1; 
}

message Notification {
  string id         = 1;
  string name       = 2;
  string app_key    = 3;
  string segment_id = 4;

  NotificationChannel channel = 5;
}

enum NotificationChannel {
  EMAIL   = 0;
  SMS     = 1;
  BROWSER = 2;
}
